--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A simple chromecast tool for collaborative presentations.",
   "main": "server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server/server.js --ignore clients/"
   },
   "repository": {
     "type": "git",
