--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.15.1",
     "mongoose": "^4.8.7",
     "morgan": "^1.8.1",
+    "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   }
