--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.0",
     "body-parser": "^1.17.1",
+    "dotenv": "^4.0.0",
     "eslint-config-hackreactor": "git://github.com/reactorcore/eslint-config-hackreactor",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
